...
      children: [
        //------------------Botão de Info-----------------------------------------------
        ABoxButton.outline(
          onClick: () async {
            showInfoBottomSheet(context);
          },
          key: const Key("info_button"),
          text: "Info",
          active: true,
          kind: ButtonKind.primary,
          prefixWidget: SvgPicture.asset('assets/icons/information.svg', height: 15.sp),
        ),
        const SizedBox(width: 8),
...
            final task = ScheduledTaskModel(
              id: isEdit
                  ? _editHelper
                        .editingTask!
                        .id // ✅ mantém o ID
                  : DateTime.now().millisecondsSinceEpoch.toString(),
              title: 'Tarefa Agendada',
              frequency: selectedFrequency!,
              eventName:
                  selectedEvent ??
                  (selectedTestEventTime != null && selectedTestEventTime!.isNotEmpty
                      ? '$selectedTestEvent $selectedTestEventTime'
                      : selectedTestEvent) ??
...
                    ),
                  ],
                );
              },
            );
          },
          key: const Key("schedule_button"),
          text: "Agendar Tarefa",
          active: canSchedule,
          kind: ButtonKind.primary,
        ),
      ],
    );
...
