...
              decoration: BoxDecoration(color: Theme.of(context).colorScheme.primary, borderRadius: BorderRadius.circular(7.sp)),
              child: Row(
                mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                children: [
                  //---------------Botão de editar tarefas----------------------
                  _buildActionButton(
                    key: const Key("botao-editar"),
                    icon: Icons.edit_outlined,
                    color: const Color(0xff163134),
                    onTap: () {
                      Slidable.of(context)?.close();
                      onEdit();
                    },
                  ),

                  //---------------Botão de deletar tarefas---------------------
                  _buildActionButton(
                    key: const Key("botao-apagar"),
                    icon: Icons.delete_outline,
                    color: const Color(0xffD72736),
                    onTap: () {
                      Slidable.of(context)?.close();
                      onDelete();
                    },
...
